--- a/starter-code/src/app/home/home.component.html
+++ b/starter-code/src/app/home/home.component.html
@@ -2,6 +2,7 @@
 <h2>{{movie.title}} {{movie.year}}</h2>
 <img [src]="movie.poster" width="400"/>
 <p>{{movie.synopsis}}</p>
+<p>{{movie.description}}</p>
 
 
 
